--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,32 +1,34 @@
 html, body {
-  font-size: 14px;
-  font-family: 'Work Sans', sans-serif;
-  background-color: rgb(255, 242, 242);
+  font-size: 16px;
+  font-family: 'PT Sans', sans-serif;
+  background-color: #087e8b;
 }
 
 h1 {
   font-weight: bold;
   font-size: 2.5rem;
-  color: rgb(32,64,86);
+  color: #ff5a5f;
+  text-shadow: 1px 2px 2px rgba(0, 0, 0, .3);
 }
 
 h2 {
-  font-size: 1rem;
+  font-size: 1.5rem;
   font-weight: bold;
+  color: black;
 }
 
 p {
-  color: rgb(74,74,74);
+  color: black;
 }
 
 .container {
-  padding-top: 5.25rem;
+  padding-top: 3rem;
 }
 
 .card {
-  height: 12.5rem;
-  background-color: rgb(32,64,86);
-  border: 4px solid #ffffff;
+  height: 11rem;
+  background-color: #ff5a5f;
+  border: 4px solid black;
   border-radius: 8px;
 }
 
